[gd_scene load_steps=5 format=3 uid="uid://b7bftc1b4dq75"]

[ext_resource type="Script" path="res://prog88a.gd" id="1_qvd1q"]

[sub_resource type="Theme" id="Theme_qus7c"]
default_font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_q4b7e"]
font_size = 32

[sub_resource type="Theme" id="Theme_673s5"]
default_font_size = 32

[node name="prog88a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qvd1q")

[node name="lne1" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 103.0
offset_top = 35.0
offset_right = 395.0
offset_bottom = 116.0
theme = SubResource("Theme_qus7c")
placeholder_text = "Num 1"

[node name="lne2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 692.0
offset_top = 42.0
offset_right = 984.0
offset_bottom = 123.0
theme = SubResource("Theme_qus7c")
placeholder_text = "Num 2"

[node name="lblOutput" type="Label" parent="."]
layout_mode = 0
offset_left = 91.0
offset_top = 141.0
offset_right = 1033.0
offset_bottom = 502.0
text = "Sum = 
Difference =	
Product =	
Average =	 
Absolute value =	
Maximum =	
Minimum = "
label_settings = SubResource("LabelSettings_q4b7e")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 522.0
offset_right = 269.0
offset_bottom = 598.0
theme = SubResource("Theme_673s5")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 441.0
offset_top = 522.0
offset_right = 660.0
offset_bottom = 598.0
theme = SubResource("Theme_673s5")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 837.0
offset_top = 522.0
offset_right = 1056.0
offset_bottom = 598.0
theme = SubResource("Theme_673s5")
text = "Exit
"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
